                                     Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
 - 01-09-2006 added: some more labels, ids 20176-20181. hopefully this will be the last.
 - 31-08-2006 fixed: mockup with fonts and profile logins.
 - 31-08-2006 changed: dialog.close(..) now takes 'all' as windowid to close all dialogs.
 - 31-08-2006 fixed: Pixel ratio passed into visualisations was wrong.
 - 31-08-2006 changed: PreviousItem takes you back to the start of the current item if you aren't within 3 seconds of the start (like most CD players)
 - 31-08-2006 fixed: [ 1548018 ] MyFiles: Context Menu Doesn't Appear When Folder is Empty.
 - 31-08-2006 fixed: [ 1548042 ] "Pause" Icon not showing when Fast-Forward in Videos.
 - 30-08-2006 fixed: some non windows smb servers would refuse to finish returning a file properly due to a bug in client. reduced max read chunk in samba to (64*1024-2) bytes, same as windows workaround in samba client
 - 30-08-2006 changed: CUtil::Cache (used for all file copies) will now spawn a separate thread for gui rendering if file is larger than 1 meg
 - 30-08-2006 fixed: Sorting of filenames consisting of a long string of numbers was broken.
 - 30-08-2006 added: failure notifications for copy, move and delete.
 - 30-08-2006 fixed: filetransfers end early for curl sources (ftp, shout, http...), due to not trying to use it's overflow buffer before trying to get more data from host.
 - 30-08-2006 added: a bunch of more localizable strings. id's 20154-20175.
 - 30-08-2006 fixed: logging out while in a media window crashed.
 - 30-08-2006 fixed: new video_ts folder stacking wouldn't set thumbnail correctly
 - 29-08-2006 fixed: [ 1548447 ] Sorting for LastFM should be separated like in Shoutcast